--- a/delivery/pages/ensaladas.html
+++ b/delivery/pages/ensaladas.html
@@ -141,7 +141,7 @@
                                 <!-- Title -->
                                 <h2 class="h2-lg">Delivery</h2>
                                 <!-- Text -->
-                                <p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+                                <p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18PM a 00AM</p>
                                 <p>-----------------------</p>
                                 <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
                                 <div class="container">
@@ -149,7 +149,7 @@
                                     <div class="contadorTienda" id="contadorTienda"></div>
                                     <div class="horizontal">
                                         <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
-                                            class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png"
+                                                class="iconoWpp" src="../images/granero/diseños/WhatsApp_icon.png"
                                                 alt=""></a>
                                         <p>249-4640289</p>
                                     </div>
@@ -210,14 +210,14 @@
                         <h3>Cesar</h3>
                         <p>Con lechuga, queso provolone, pollo, croutons y salsa cesar</p>
                         <div class="boxMenu-4-2">
-                            <p>$4690</p>
+                            <p>$4590</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
                         <p> </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$4690 </p>
+                        <p>$4590 </p>
                     </div>
                 </div>
 
@@ -227,14 +227,14 @@
                         <h3>Arizona</h3>
                         <p>Con lechuga, zanahoria, tomate y pollo</p>
                         <div class="boxMenu-4-2">
-                            <p>$4690</p>
+                            <p>$4590</p>
                         </div>
                     </div>
                     <div class="boxMenu-3">
                         <p> </p>
                     </div>
                     <div class="boxMenu-4">
-                        <p>$4690 </p>
+                        <p>$4590 </p>
                     </div>
                 </div>
 
