--- a/delivery/pages/postres.html
+++ b/delivery/pages/postres.html
@@ -140,7 +140,7 @@
                             <!-- Title -->
                             <h2 class="h2-lg">Delivery</h2>
                             <!-- Text -->
-                            <p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+                            <p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18PM a 00AM</p>
                             <p>-----------------------</p>
                             <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
                             <div class="container">
@@ -148,7 +148,7 @@
                                 <div class="contadorTienda" id="contadorTienda"></div>
                                 <div class="horizontal">
                                     <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
-                                        class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png"
+                                            class="iconoWpp" src="../images/granero/diseños/WhatsApp_icon.png"
                                             alt=""></a>
                                     <p>249-4640289</p>
                                 </div>
@@ -194,7 +194,7 @@
                     <h3>Cheesecake</h3>
                     <p>De frutos rojos</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -202,7 +202,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                     <h3>Tarta de frutilla</h3>
                     <p>Con crema, dulce de leche y frutillas</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -221,7 +221,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                     <h3>Tarta cabsha</h3>
                     <p>Con dulce de leche y chocolate</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -240,7 +240,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                     <h3>Brownie classic</h3>
                     <p>Con crema, dulce de leche y frutillas</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -259,7 +259,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -270,7 +270,7 @@
                     <h3>Brownie kit kat y oreo</h3>
                     <p>Con crema, dulce de leche, barra Kit Kat y galletita oreo</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -278,7 +278,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -289,7 +289,7 @@
                     <h3>Lemon pie</h3>
                     <p>Cpn crema de limón y merengue</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -297,7 +297,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                     <h3>Torta oreo</h3>
                     <p>Con crema, dulce de leche y merengue</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -316,7 +316,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -327,7 +327,7 @@
                     <h3>Rogel</h3>
                     <p>Con dulce de leche y merengue</p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -335,7 +335,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -346,7 +346,7 @@
                     <h3>Waffle frutal</h3>
                     <p>Con frutas, crema, dulce de leche y salsa de chocolate</p>
                     <div class="boxMenu-4-2">
-                        <p>$4290</p>
+                        <p>$4490</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -354,7 +354,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$4290</p>
+                    <p>$4490</p>
                     <p>$3490</p>
                 </div>
             </div>
@@ -365,7 +365,7 @@
                     <h3>Waffle especial</h3>
                     <p>Con nutella, oreos, frutillas y crema</p>
                     <div class="boxMenu-4-2">
-                        <p>$4290</p>
+                        <p>$4490</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -373,7 +373,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$4290</p>
+                    <p>$4490</p>
                     <p>$3490</p>
                 </div>
             </div>
@@ -384,7 +384,7 @@
                     <h3>Waffle helado</h3>
                     <p>Con dos bochas de helado, crema, nutella y Kinder</p>
                     <div class="boxMenu-4-2">
-                        <p>$4290</p>
+                        <p>$4490</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -392,7 +392,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$4290</p>
+                    <p>$4490</p>
                     <p>$3490</p>
                 </div>
             </div>
@@ -403,7 +403,7 @@
                     <h3>Banana split</h3>
                     <p>Con tres bochas de helado y crema</p>
                     <div class="boxMenu-4-2">
-                        <p>$4290</p>
+                        <p>$4490</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -411,7 +411,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$4290</p>
+                    <p>$4490</p>
                     <p>$3490</p>
                 </div>
             </div>
@@ -422,7 +422,7 @@
                     <h3>Chocooreo / chocotorta</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$3790</p>
+                        <p>$3990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -430,7 +430,7 @@
                     <p>Solo</p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3790</p>
+                    <p>$3990</p>
                     <p>$2990</p>
                 </div>
             </div>
@@ -459,11 +459,11 @@
                     <h3>Licuados</h3>
                     <p>De frutilla, banana, durazno, frambuesa, arandanos, frutos rojos. Con leche o agua</p>
                     <div class="boxMenu-4-2">
-                        <p>$1890</p>
+                        <p>$1900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$1890 </p>
+                    <p>$1900 </p>
                 </div>
             </div>
 
@@ -473,11 +473,11 @@
                     <h3>Malteadas</h3>
                     <p>De dulce de leche, chocolate, frutilla o vainilla</p>
                     <div class="boxMenu-4-2">
-                        <p>$1890</p>
+                        <p>$1900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$1890 </p>
+                    <p>$1900 </p>
                 </div>
             </div>
 
@@ -487,11 +487,11 @@
                     <h3>Chocolatada</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$1600</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$1600 </p>
                 </div>
             </div>
 
@@ -501,11 +501,11 @@
                     <h3>Milkshake</h3>
                     <p>Nutella, oreo o brownie</p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$1900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$1900 </p>
                 </div>
             </div>
 
@@ -519,11 +519,11 @@
                     <h3>Negro</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1000</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$950 </p>
+                    <p>$1000 </p>
                 </div>
             </div>
 
@@ -533,11 +533,11 @@
                     <h3>Cortado</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1100</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1100 </p>
                 </div>
             </div>
 
@@ -547,11 +547,11 @@
                     <h3>Con leche </h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1100</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1100 </p>
                 </div>
             </div>
 
@@ -561,11 +561,11 @@
                     <h3>Lágrima</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1100</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1100 </p>
                 </div>
             </div>
 
@@ -589,11 +589,11 @@
                     <h3>Latte</h3>
                     <p>Con chocolate blanco o caramel</p>
                     <div class="boxMenu-4-2">
-                        <p>$1390</p>
+                        <p>$1500</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$1390 </p>
+                    <p>$1500 </p>
                 </div>
             </div>
 
@@ -603,11 +603,11 @@
                     <h3>Yogurt</h3>
                     <p>Con granola y frutas</p>
                     <div class="boxMenu-4-2">
-                        <p>$2290</p>
+                        <p>$2300</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$2290 </p>
+                    <p>$2300 </p>
                 </div>
             </div>
 
@@ -617,11 +617,11 @@
                     <h3>Frappe</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$1900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$1900 </p>
                 </div>
             </div>
 
@@ -631,11 +631,11 @@
                     <h3>Té</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$300</p>
+                        <p>$600</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$500 </p>
+                    <p>$600 </p>
                 </div>
             </div>
 
