--- a/delivery/pages/sandwiches.html
+++ b/delivery/pages/sandwiches.html
@@ -140,7 +140,7 @@
                             <!-- Title -->
                             <h2 class="h2-lg">Delivery</h2>
                             <!-- Text -->
-                            <p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+                            <p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18PM a 00AM</p>
                             <p>-----------------------</p>
                             <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
                             <div class="container">
@@ -148,7 +148,7 @@
                                 <div class="contadorTienda" id="contadorTienda"></div>
                                 <div class="horizontal">
                                     <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
-                                            class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png"
+                                            class="iconoWpp" src="../images/granero/diseños/WhatsApp_icon.png"
                                             alt=""></a>
                                     <p>249-4640289</p>
                                 </div>
@@ -190,7 +190,7 @@
                     <h3>Lomito simple</h3>
                     <p>Sandwich de lomito con pan casero</p>
                     <div class="boxMenu-4-2">
-                        <p>$6590</p>
+                        <p>$5990</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -198,7 +198,7 @@
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$6590 </p>
+                    <p>$5990 </p>
                     <p>$4990 </p>
                 </div>
             </div>
@@ -208,7 +208,7 @@
                     <h3>Lomito completo</h3>
                     <p>Sandwich de lomito con jamón, queso, lechuga y tomate en pan casero</p>
                     <div class="boxMenu-4-2">
-                        <p>$6990</p>
+                        <p>$6590</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
@@ -216,7 +216,7 @@
                     <p>Solo </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$6990 </p>
+                    <p>$6590 </p>
                     <p>$5390 </p>
                 </div>
             </div>
@@ -227,15 +227,13 @@
                     <h3>Tostado</h3>
                     <p>Con jamón y queso</p>
                     <div class="boxMenu-4-2">
-                        <p>$3800</p>
+                        <p>$3000</p>
                     </div>
                 </div>
                 <div class="boxMenu-3">
-                    <p>Con cafe </p>
-                    <p>Solo </p>
+                    <p> </p>
                 </div>
                 <div class="boxMenu-4">
-                    <p>$3800 </p>
                     <p>$3000 </p>
                 </div>
             </div>
