--- a/delivery/pages/bebidas.html
+++ b/delivery/pages/bebidas.html
@@ -140,7 +140,7 @@
                             <!-- Title -->
                             <h2 class="h2-lg">Delivery</h2>
                             <!-- Text -->
-                            <p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+                            <p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18PM a 00AM</p>
                             <p>-----------------------</p>
                             <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
                             <div class="container">
@@ -148,7 +148,7 @@
                                 <div class="contadorTienda" id="contadorTienda"></div>
                                 <div class="horizontal">
                                     <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
-                                        class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png"
+                                            class="iconoWpp" src="../images/granero/diseños/WhatsApp_icon.png"
                                             alt=""></a>
                                     <p>249-4640289</p>
                                 </div>
@@ -194,11 +194,11 @@
                     <h3>Pepsi</h3>
                     <p>Comun o black (sin azucar)</p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1200</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1200 </p>
                 </div>
             </div>
 
@@ -208,11 +208,11 @@
                     <h3>Seven up</h3>
                     <p>Comun o free (sin azucar)</p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1200</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1200 </p>
                 </div>
             </div>
 
@@ -222,11 +222,11 @@
                     <h3>Mirinda</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1200</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1200 </p>
                 </div>
             </div>
 
@@ -236,11 +236,11 @@
                     <h3>Paso de los toros</h3>
                     <p>Tonica o pomelo</p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1200</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1200 </p>
                 </div>
             </div>
 
@@ -250,11 +250,11 @@
                     <h3>Saborizadas</h3>
                     <p>Pomelo, naranja o manzana</p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1200</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1200 </p>
                 </div>
             </div>
 
@@ -264,11 +264,11 @@
                     <h3>Agua mineral</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$990</p>
+                        <p>$1200</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$990 </p>
+                    <p>$1200 </p>
                 </div>
             </div>
 
@@ -282,11 +282,11 @@
                     <h3>Andes</h3>
                     <p>Rubia, roja o negra</p>
                     <div class="boxMenu-4-2">
-                        <p>$1600</p>
+                        <p>$1900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$1600 </p>
+                    <p>$1900 </p>
                 </div>
             </div>
 
@@ -296,11 +296,11 @@
                     <h3>Budweiser</h3>
                     <p></p>
                     <div class="boxMenu-4-2">
-                        <p>$1600</p>
+                        <p>$1900</p>
                     </div>
                 </div>
                 <div class="boxMenu-3 boxMenu-4">
-                    <p>$1600 </p>
+                    <p>$1900 </p>
                 </div>
             </div>
 
