--- a/delivery/pages/celiacos.html
+++ b/delivery/pages/celiacos.html
@@ -141,7 +141,7 @@
                             <!-- Title -->
                             <h2 class="h2-lg">Delivery</h2>
                             <!-- Text -->
-                            <p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+                            <p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18PM a 00AM</p>
                             <p>-----------------------</p>
                             <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
                             <div class="container">
@@ -149,7 +149,7 @@
                                 <div class="contadorTienda" id="contadorTienda"></div>
                                 <div class="horizontal">
                                     <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
-                                        class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png"
+                                            class="iconoWpp" src="../images/granero/diseños/WhatsApp_icon.png"
                                             alt=""></a>
                                     <p>249-4640289</p>
                                 </div>
@@ -432,7 +432,7 @@
             </div>
 
         </div>
-    </section>
+    </section> 
 
 
 </main>
