--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 							<!-- Text -->
 							<p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
 							<p>-----------------------</p>
-							<p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
+							<p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 12AM a 00AM</p>
 							
 							<div class="container">
 								<div class="estadoTienda " id="estadoTienda"></div>
@@ -1237,18 +1237,20 @@
 						<!-- WORKING HOURS -->
 						<div class="col-sm-6 col-lg-4">
 							<div class="footer-info mb-30">
-
+	
 								<!-- Title -->
-								<h5 class="h5-md">Horas de trabajo</h5>
-
+								<h5 class="h5-md">Horarios</h5>
+	
 								<!-- Text -->
+								<p>Lunes: 18 - 00:00</p>
+								<p>Martes: 18 - 00:00</p>
 								<p>Miercoles: 18 - 00:00</p>
 								<p>Jueves: 18 - 00:00</p>
-								<p>Viernes: 11:30 - 00:00</p>
-								<p>Sábados: 11:30 - 00:00</p>
-								<p>Domingos: 11:30 - 00:00</p>
-								<p>feriados: 11:30 - 00:00</p>
-
+								<p>Viernes: 12 - 00:00</p>
+								<p>Sábados: 12 - 00:00</p>
+								<p>Domingos: 12 - 00:00</p>
+								<p>feriados: 12 - 00:00</p>
+	
 							</div>
 						</div>
 
