--- a/pages/museo.html
+++ b/pages/museo.html
@@ -900,22 +900,24 @@
 
 
 					<!-- WORKING HOURS -->
-					<div class="col-sm-6 col-lg-4">
-						<div class="footer-info mb-30">
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="footer-info mb-30">
 
-							<!-- Title -->
-							<h5 class="h5-md">Horas de trabajo</h5>
+                            <!-- Title -->
+                            <h5 class="h5-md">Horarios</h5>
 
-							<!-- Text -->
-							<p>Miercoles: 18 - 00:00</p>
-							<p>Jueves: 18 - 00:00</p>
-							<p>Viernes: 11:30 - 00:00</p>
-							<p>Sábados: 11:30 - 00:00</p>
-							<p>Domingos: 11:30 - 00:00</p>
-							<p>feriados: 11:30 - 00:00</p>
+                            <!-- Text -->
+                            <p>Lunes: 18 - 00:00</p>
+                            <p>Martes: 18 - 00:00</p>
+                            <p>Miercoles: 18 - 00:00</p>
+                            <p>Jueves: 18 - 00:00</p>
+                            <p>Viernes: 12 - 00:00</p>
+                            <p>Sábados: 12 - 00:00</p>
+                            <p>Domingos: 12 - 00:00</p>
+                            <p>feriados: 12 - 00:00</p>
 
-						</div>
-					</div>
+                        </div>
+                    </div>
 
 
 					<!-- FOOTER IMAGES -->
