--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
 							<!-- Title -->
 							<h2 class="h2-lg">Ubicación y horarios</h2>
 							<!-- Text -->
-							<p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
-							<p>-----------------------</p>
-							<p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 12AM a 00AM</p>
+							<p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18PM a 01AM</p>
+                                <p>-----------------------</p>
+                                <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 12PM a 01AM</p>
 							
 							<div class="container">
 								<div class="estadoTienda " id="estadoTienda"></div>
