--- a/delivery/index.html
+++ b/delivery/index.html
@@ -134,12 +134,12 @@
                                 <!-- Title -->
                                 <h2 class="h2-lg">Delivery</h2>
                                 <!-- Text -->
-                                <p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 20PM a 23PM</p>
+                                <p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 20 a 23</p>
                                 <p>-----------------------</p>
-                                <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 12AM a 15PM y de 20 a 23PM</p>
+                                <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 12 a 15 y de 20 a 23</p>
                                 <div class="container">
                                     <div class="estadoTienda " id="estadoTienda"></div>
-                                    <div class="contadorTienda" id="contadorTienda"></div>
+                                    <!-- Text <div class="contadorTienda" id="contadorTienda"></div>-->
                                     <div class="horizontal">
                                         <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
                                                 class="iconoWpp" src="../images/granero/diseños/WhatsApp_icon.png"
