--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
 							<!-- Title -->
 							<h2 class="h2-lg">Ubicación y horarios</h2>
 							<!-- Text -->
-							<p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18PM a 01AM</p>
+							<p class="p-lg grey-color">Lunes, Martes, Miercoles y Jueves de 18 a 00</p>
                                 <p>-----------------------</p>
-                                <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 12PM a 01AM</p>
+                                <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 12 a 00</p>
 							
 							<div class="container">
 								<div class="estadoTienda " id="estadoTienda"></div>
-								<div class="contadorTienda" id="contadorTienda"></div>
+								<!-- Text <div class="contadorTienda" id="contadorTienda"></div>-->
 								<a href="https://www.google.com/maps/dir//Granero+66,+Av.+Don+Bosco+2340,+B7000+Tandil,+Provincia+de+Buenos+Aires/@-37.3695264,-59.1141707,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95911f717748a34f:0x5fc6f216e0bd6b0d!2m2!1d-59.1115958!2d-37.3695307?hl=es&entry=ttu"
 									target="_blank" class="btn btn-md btn-red tra-red-hover">Como llegar</a>
 							</div>
