--- a/delivery/index.html
+++ b/delivery/index.html
@@ -56,6 +56,12 @@
 
 </head>
 
+<!-- PRELOADER SPINNER
+		============================================= -->
+		<div class="loader-wrapper">
+			<div class="loader loader-img"></div>
+		</div>
+
 <body>
 
 
@@ -210,6 +216,27 @@
 
                 <div class="cajaTitulo ">
                     <h2>Hamburguesas</h2>
+                </div>
+
+                <div class="boxMenu">
+                    <img loading="lazy" class="imagenMenu" src="../images/granero/logos/minilogo.png" alt="">
+                    <div class="boxMenu-2">
+                        <h3>Phoenix</h3>
+                        <p>Medallon de pollo con cheddar, jamon, queso y lechuga</p>
+                        <p class="negrita">Con papas</p>
+                        <div class="boxMenu-4-2">
+                            <p>$6490</p>
+                        </div>
+                    </div>
+                    <div class="boxMenu-3">
+                        <p>Con papas </p>
+                        
+                    </div>
+                    <div class="boxMenu-4">
+                        <p>$6490 </p>
+                        
+                    </div>
+
                 </div>
 
                 <div class="boxMenu">
@@ -1948,6 +1975,7 @@
     <script src="../js/jquery.ajaxchimp.min.js"></script>
     <script src="../js/horarioDelivery.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="../js/preloader.js"></script>
     <script>
         $(document).ready(function() {
             var options = {
