--- a/index.html
+++ b/index.html
@@ -82,12 +82,8 @@
 
 		<!-- PRELOADER SPINNER
 		============================================= -->
-		<div id="loader-wrapper">
-			<div id="loader">
-				<div class="cssload-spinner">
-					<img src="./images/iso-66.png" alt="cargando">
-				</div>
-			</div>
+		<div class="loader-wrapper">
+			<div class="loader loader-img"></div>
 		</div>
 
 
@@ -1352,6 +1348,7 @@
 		<script src="https://player.vimeo.com/api/player.js"></script>
 		<!-- Custom Script -->
 		<script src="js/custom.js"></script>
+		<script src="js/preloader.js"></script>
 
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
 		<!-- [if lt IE 9]>
