--- a/pages/museo.html
+++ b/pages/museo.html
@@ -56,12 +56,8 @@
 
 <!-- PRELOADER SPINNER
 		============================================= -->
-		<div id="loader-wrapper">
-			<div id="loader">
-				<div class="cssload-spinner">
-					<img src="../images/iso-66.png" alt="cargando">
-				</div>
-			</div>
+		<div class="loader-wrapper">
+			<div class="loader loader-img"></div>
 		</div>
 
 <body>
@@ -1014,6 +1010,7 @@
 	<script src="../js/jquery.ajaxchimp.min.js"></script>
 	<script src="../js/ubicacion.js"></script>
 	<script src="../js/museo.js"></script>
+	<script src="../js/preloader.js"></script>
 
 	<!-- Custom Script -->
 	<script src="../js/custom.js"></script>
