--- a/delivery/index.html
+++ b/delivery/index.html
@@ -222,7 +222,7 @@
                     <img loading="lazy" class="imagenMenu" src="../images/granero/logos/minilogo.png" alt="">
                     <div class="boxMenu-2">
                         <h3>Phoenix</h3>
-                        <p>Medallon de pollo con cheddar, jamon, queso y lechuga</p>
+                        <p>Medallon de pollo con cheddar, jamón, lechuga y tomate</p>
                         <p class="negrita">Con papas</p>
                         <div class="boxMenu-4-2">
                             <p>$6490</p>
